chore: removed smtp envs, replaced them with the rest used in the program

--- a/example.env
+++ b/example.env
@@ -1,5 +1,8 @@
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_ACCOUNT_USERNAME=your-email@gmail.com
-SMTP_ACCOUNT_PASSWORD=your-app-password
-SMTP_ACCOUNT_EMAIL=your-email@gmail.com
+MODE = demo
+ADDR = 0.0.0.0
+PORT = 8081
+UNIX_SOCK =
+DATA =
+DRIVER = sqlite
+DSN =
+INSTANCE_URL =
