--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
@@ -42,6 +43,7 @@
     "mermaid": "^11.8.0",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-force-graph-2d": "^1.28.0",
@@ -51,6 +53,7 @@
     "react-router-dom": "^7.6.3",
     "react-simple-pull-to-refresh": "^1.3.3",
     "react-use": "^17.6.0",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "textarea-caret": "^3.1.0",
