--- a/web/package.json
+++ b/web/package.json
@@ -42,6 +42,7 @@
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.536.0",
     "mermaid": "^11.9.0",
+    "mime": "^4.0.7",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
     "next-themes": "^0.4.6",
