chore: added more env

--- a/example.env
+++ b/example.env
@@ -6,3 +6,9 @@ DATA =
 DRIVER = sqlite
 DSN =
 INSTANCE_URL =
+
+# DRIVER=mysql
+# DSN=root:password@tcp(localhost)/wekalist_prod
+
+# DRIVER=postgres
+# DSN=postgresql://root:password@localhost:5432/wekalist
