--- a/scripts/Dockerfile
+++ b/scripts/Dockerfile
@@ -84,4 +84,4 @@ ENV DATA=/opt/wekalist/data
 LABEL org.opencontainers.image.description DESCRIPTION="Wekalist is a modern, open-source, AI-driven self-hosted knowledge management and note-taking platform designed for privacy-conscious users and organizations."
 
 # Start the application
-CMD ["./wekalist"]
+ENTRYPOINT ["./wekalist"]
