chore: updated env

--- a/example.env
+++ b/example.env
@@ -8,7 +8,7 @@ DSN =
 INSTANCE_URL =
 
 # DRIVER=mysql
-# DSN=root:password@tcp(localhost)/wekalist_prod
+# DSN=root:password@tcp(localhost)/wekalist
 
 # DRIVER=postgres
 # DSN=postgresql://root:password@localhost:5432/wekalist
