--- a/web/package.json
+++ b/web/package.json
@@ -36,6 +36,7 @@
     "fuse.js": "^7.1.0",
     "highlight.js": "^11.11.1",
     "i18next": "^25.3.2",
+    "input-otp": "^1.4.2",
     "katex": "^0.16.22",
     "leaflet": "^1.9.4",
     "lodash-es": "^4.17.21",
